--- a/miniprogram/pages/contestant/contestant.wxml
+++ b/miniprogram/pages/contestant/contestant.wxml
@@ -2,7 +2,12 @@
 
 <van-toast id="van-toast" />
 <view>
-  <image src="{{contestant.team_image}}"></image>
+  <van-image
+    width="100%"
+    height="200"
+    fit="contain"
+    src="{{contestant.team_image}}"
+  />
   <i-card title="{{contestant.team_name}}" full extra="{{poll}}票  {{rank}}名">
     <view slot="content">{{contestant.team_introduce}}</view>
     <view slot="footer">
@@ -10,7 +15,7 @@
     </view>
   </i-card>
   <view class="btn-box">
-    <i-button i-class="btn" bind:click="sendVote" inline type="primary">投票</i-button>
-    <i-button i-class="btn" bind:click="sendGift" inline type="warning">礼物</i-button>
+    <i-button long i-class="btn" bind:click="sendVote" size="default" type="primary">投票</i-button>
+    <i-button long i-class="btn" bind:click="sendGift" size="default" type="warning">礼物</i-button>
   </view>
 </view>
