--- a/miniprogram/pages/contestant/contestant.wxss
+++ b/miniprogram/pages/contestant/contestant.wxss
@@ -1,13 +1,12 @@
 /* pages/contestant/contestant.wxss */
 .btn-box{
-  border: 1px solid red;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
-  
 }
 .btn{
-  border: 1px solid green;
-  max-width: 80%
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
