--- a/miniprogram/pages/participant/participant.wxml
+++ b/miniprogram/pages/participant/participant.wxml
@@ -42,7 +42,13 @@
       bind:change="onChangIntroduce"
     />
   </van-cell-group>
-  <image wx:if="{{imagePath}}" src="{{imagePath}}"></image>
+    <van-image
+    width="100%"
+    height="200"
+    fit="contain"
+    wx:if="{{imagePath}}"
+    src="{{imagePath}}"
+  />
   <van-cell title="活动宣传图" value="{{imgstatus}}" size="large" label="选择一张合适的图片" bind:click="selectImage" />
   <view class="btn">
   <van-button 
